--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <title>きりたん丼について</title>
 <style>
 .center { text-align: center; }
+  body {
+  background-image: url("https://kiritan.work/packs/media/styles/images/bg_kiritan-a13517b369c7bf404024498e14f97c50.webp");
+  background-size: cover;
+}
 </style>
 </head>
 <body>
-<body background="https://kiritan.work/packs/media/styles/images/bg_kiritan-a13517b369c7bf404024498e14f97c50.webp">
-</body>
 <div class="center">
 <p><a href="https://da-tenshi.github.io/WebSite/"><img class="fit-picture" src="https://submarin.online/files/thumbnail-fb05704a-ba94-46a0-80d0-52370e9471a8" alt="ホームページ"width="150" height="100"></p></a>
 <a href="https://kiritan,work"><img src="https://kiritan.work/apple-touch-icon.png"></a>
