--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="center">
 <p><a href="https://da-tenshi.github.io/WebSite/"><img class="fit-picture" src="https://submarin.online/files/thumbnail-fb05704a-ba94-46a0-80d0-52370e9471a8" alt="ホームページ"width="150" height="100"></p></a>
-<a href="https://kiritan,work"><img src="https://kiritan.work/apple-touch-icon.png"></a>
+<a href="https://kiritan.work"><img src="https://kiritan.work/apple-touch-icon.png"></a>
 <p><a href="https://kiritan.work">きりたん丼</a>は、<a href="https://kiritan.work/@kiritan">きりたん</a>が運営してるmastdonインスタンスです。
 
 <br>只今、残念ながら<b>新規登録受付をしていない</b>そうで、<b>他の人に招待してもらう必要がある</b>そうです。
