--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 <meta name="description" content="きりたん丼についての所">
 <link rel="canonical" href="https://da-tenshi.github.io/KIRITAN/" class="">
 <link rel="shortcut icon" href="https://submarin.online/files/dbd4c1af-4670-4938-a889-4aca1941c0cc" type="image/png">
-<title>きりたん丼について</title>
+<title>きりたん丼</title>
 <style>
 .center { text-align: center; }
-  body {
-  background-image: url("https://kiritan.work/packs/media/styles/images/bg_kiritan-a13517b369c7bf404024498e14f97c50.webp");
-  background-size: cover;
-}
 </style>
 </head>
-<body>
+<body bgcolor="#2c161d" text="#ffffff" link="#ffff00" alink="#00ff00" vlink="#ffaa00">
+>
 <div class="center">
-<p><a href="https://da-tenshi.github.io/WebSite/"><img class="fit-picture" src="canvas (9).png" alt="ホームページ"type="img/png"width="150" height="100"></p></a>
-<a href="https://kiritan.work"><img src="https://kiritan.work/apple-touch-icon.png"></a>
-<p><a href="https://kiritan.work">きりたん丼</a>は、<a href="https://kiritan.work/@kiritan">きりたん</a>が運営してるmastdonインスタンスです。
-
-<br>只今、残念ながら<b>新規登録受付をしていない</b>そうで、<b>他の人に招待してもらう必要がある</b>そうです。
-私のを貼っておくんでぜひ来てね。<br><a href="https://kiritan.work/invite/Y86m2QrX">ここから参加する！</a>
-<br>ぜひ来てくださいね！</p>
+<p><a href="https://da-tenshi.github.io/WebSite/"><img class="fit-picture" src="canvas (9).png" alt="ホームページ"type="img/png"width="150" height="100"></a></p>
+<h1>きりたん丼is何</h1>
+  <p><a href="https://kiritan.work">きりたん丼</a>は、<a href="https://kiritan.work/@kiritan">きりたん</a>が運営してるmastdonインスタンス。<p>
+  <p>Mastodon４.1.0です。</p>
+  <p><img class="fit-picture" src="Screenshot 2023-03-15 06.34.27.png" alt="きりたん丼ホーム" type="img/png"></p>
+<p>きりたん丼の様子</p>
+<p>只今、残念ながら<b>新規登録受付をしていない</b>そうで、<b>他の人に招待してもらう必要がある</b>そうです。</p>
+<p>私のを貼っておくんでぜひ来てね。</p>
+  <p><a href="https://kiritan.work/invite/Y86m2QrX">ここから参加する！</a></p>
+<p>ぜひ来てくださいね！</p>
 
 <p><a href="https://da-tenshi.github.io/WebSite/">ホームページに戻る</a></p>
 <p><a href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/j/49/1659679847/" alt="アクセスカウンター"></a></p>
